Bug 1340902: Do not throw in nsIMsgSendLater if an Outbox (nsMsgQueueForLater flagged) folder does not exist. r=aceman